# Husky

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  configure.py  install.py
assets/: test.txt
assets/models/: dwarf.asset  fort_golem.asset  mech_golem.asset
assets/objs/: mech_golem.mtl
assets/shaders/: aabb.frag.glsl  aabb.vert.glsl  aabb.vert.spv  color_frag.spv  color_tri.frag  color_tri.vert  color_vert.spv  cull.comp.glsl  cull.comp.spv  culling.comp.glsl  default_lit.frag  default_mesh.vert  lighting_frag.spv  mesh_vert.spv  standard.frag.glsl  standard.frag.spv  standard.vert.glsl  standard.vert.spv  standard_frag.glsl  standard_vert.glsl  tri_mesh.vert  triangle.frag  triangle.vert
engine/core/: application.cpp  application.h  client_app.cpp  client_app.cpp~  client_app.cpz~  client_app.h  def.h  perf.h  position.cpp  position.h  random.cpp  random.h  resources.cpp  resources.h  server_app.cpp  server_app.h  types.h  window.cpp  window.h  world_state.cpp  world_state.h
engine/crypto/: checksum.cpp  checksum.h
engine/ecs/: components.cpp  components.h  ecs_types.h  entity.h  scene.cpp  scene.h
engine/io/: assets.cpp  assets.h  files.cpp  files.h  input_map.cpp  input_map.h  logging.cpp  logging.h  raw_inputs.cpp  raw_inputs.h
engine/net/: client.cpp  client.h  client_slot.cpp  client_slot.h  connection.cpp  connection.h  listener.cpp  listener.h  message.cpp  message.h  message_builder.cpp  message_builder.h  message_handler.h  message_queue.cpp  message_queue.h  sender.cpp  sender.h  server.cpp  server.h  types.h
engine/render/: bounding_boxes.cpp  bounding_boxes.h  buffer.cpp  buffer.h  callback_handler.h  context.cpp  context.h  frame.cpp  frame.h  gl_types.h  material.cpp  material.h  mesh.cpp  mesh.h  pipeline_builder.cpp  pipeline_builder.h  shader.cpp  shader.h  tri_mesh.cpp  tri_mesh.h  vertex.cpp  vertex.h  vk_engine.cpp  vk_engine.h  vk_init.cpp  vk_init.h  vk_types.h  window.cpp  window.h
engine/util/: buf.h  err.h  result.h  serialize.cpp  serialize.h
lib/: install_dependencies.py
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
runtime/: main.cpp
scripts/: build.py  include_assets.py  install_dependencies.py
src/: main.cpp
src/core/: window.cpp
test/: test.cpp
test/core/: resources.cpp
test/ecs/: scene.cpp
test/io/: files.cpp  logging.cpp
test/net/: message.cpp
test/util/: serialize.cpp
tools/: converter.cpp
